--- a/myApp/resources/views/shops.njk
+++ b/myApp/resources/views/shops.njk
@@ -84,5 +84,20 @@
     );}
 
   })
+        var obj = $("form img");
+	obj.on('dragenter dragover drop', function (e)
+	{
+	    e.stopPropagation();
+	    e.preventDefault();
+	     var files = e.originalEvent.dataTransfer.files;
+	 	var file=files[0]
+	 	var filereader=new FileReader()
+	 	filereader.onloadend=(event)=>{
+	 		obj.attr('src',event.target.result);
+	 		$("form h4").append("<input type='hidden' name='avatar' value="+obj.attr("src").slice(22,obj.attr("src").length)+">");
+	 	}
+	 	filereader.readAsDataURL(file);
+
+	});
   </script>
 {% endblock %}
